Fix content overflow

--- a/src/sass/2-layout/_layout.scss
+++ b/src/sass/2-layout/_layout.scss
@@ -3,6 +3,6 @@
   "intro"
 ;
 
-html, body {
+main {
   overflow-x: hidden; 
 }
